# cs5237-VoronoiArt

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  ThirdPartyNotices.txt  delaunay.md
CS5237/: .gitignore  CS5237.sln  CS5237.suo.orig  CS5237.vcproj  CS5237.vcxproj  UpgradeLog.XML  input.txt  input10.txt  input100.txt  input20.txt  input200.txt  input30.txt  input50.txt  input6.txt  output-normal.txt  output10.txt  output100.txt  output20.txt  output30.txt  output50.txt  output6.txt  test.cpp
CS5237/ipch/basics-e9f73961/debug/: basics-33c07b5e.ipch
Phase II/: Local.testsettings  Phase II.sln  Phase II.sln.old  Phase II.suo.old  Phase II.vsmdi  TraceAndTestImpact.testsettings  UpgradeLog.XML  delaunayTri.h  input.txt  lab 4.vcproj  lab 4.vcxproj  lab 4.vcxproj.filters  main.cpp  savefile.txt
Phase II/Debug/: BuildLog.htm
Phase II/basics/: StdAfx.h  UpgradeLog.XML  basics.ncb  li.cpp  li.h  lmath.cpp  lmath.h  pointSet.cpp  pointSet.h
Phase II/basics/Debug/: BuildLog.htm
Phase II/basicsP2/: basicsP2.vcproj  basicsP2.vcxproj  pointSetArray.cpp  trist.cpp  trist.h
Phase II/basicsP2/Debug/: BuildLog.htm
Phase II/ipch/basicsp2-aeab80ba/: basicsp2-71700b23.ipch
basics/: .gitignore  Readme.txt  StdAfx.cpp  basics.dsp  basics.dsw  basics.opt  basics.plg  basics.sln  basics.vcproj  basics.vcxproj  basics.vcxproj.filters  lmath.cpp  pointSet.cpp  pointSet.h  stopWatch.h
basicsP2/: basicsP2.vcxproj  basicsP2.vcxproj.filters  pointSetArray.cpp  pointSetArray.h  trist.cpp  trist.h
basicsP3/: ReadMe.txt  basicsP3.vcxproj  basicsP3.vcxproj.filters  directedGraph.cpp  directedGraph.h  stdafx.cpp
basicsTests/: basicsTests.vcxproj  basicsTests.vcxproj.filters  basictests.cpp
forms/: mainqt.ui
gtest-1.7.0/msvc/: gtest.vcxproj
include/: VEdge.h  VEvent.h  VParabola.h  Voronoi.h  delaunay.h  delaunayTri.h  generateProbabilityDistribution.h  generatepoints.h  imagedata.h  mainqt.h  mypanelopengl.h  polypixel.h  shader_util.h  tracing.h
include/basics/: li.h  lmath.h  pointSet.h  polygon.h
include/basicsP2/: pointSetArray.h  trist.h
include/basicsP3/: directedGraph.h
include/delaunay/: dagnode.h  delaunay.h  delaunaytri.h  directedgraph.h  li.h  lmath.h  point.h  pointset.h  pointsetarray.h  pointsetio.h  polygon.h  signDet.h  triangle.h  trianglegeometry.h  triangulation.h  trist.h
include/delaunay/longint/: li.h  lmath.h
include/geometry/: linesegment.h  point.h  polygon.h
include/linux/: platform.h
include/linux/basics/: stopWatch.h
include/mac/: platform.h  stopwatch.h
include/ui/opengl/: graphics.h
include/ui/qt5/: delaunay.h  voronoieffect.h
include/voronoi/: polyconstruct.h  vedge.h  vevent.h  voronoi.h  vparabola.h  vpoint.h
include/win32/: platform.h  stopwatch.h
include/win32/basics/: stopWatch.h
make/: Makefile
make/cs5237qt_linux/: cs5237qt_linux.pro
msvc/cs5237_msvc2010/: cs5237_msvc2010.sln
msvc/cs5237_msvc2010/basics_libs/: basics_libs.vcxproj  basics_libs.vcxproj.filters
msvc/cs5237_msvc2010/cs5237_main/: cs5237_main.vcxproj  cs5237_main.vcxproj.filters
msvc/cs5237_msvc2010/cs5237_msvc2010/: cs5237_msvc2010.vcxproj
msvc/cs5237_msvc2010/cs5237_qt/: cs5237_qt.vcxproj  cs5237_qt.vcxproj.filters
msvc/cs5237_msvc2010/cs5237_qt/GeneratedFiles/: qrc_mainqt.cpp  ui_mainqt.h
msvc/cs5237_msvc2010/polyavg_shader_test/: polyavg_shader_test.vcxproj  polyavg_shader_test.vcxproj.filters
msvc/cs5237_msvc2010/unittests/: unittests.vcxproj  unittests.vcxproj.filters
msvc/cs5237_qt/: cs5237_qt.vcxproj  cs5237_qt.vcxproj.filters
resource/: mainqt.qrc
shaders/: reduce - Copy.frag  reduce.frag  reduce.vert
src/: VEdge.h  VEvent.h  VParabola.cpp  VParabola.h  VPoint.h  Voronoi.cpp  Voronoi.h  delaunay.cpp  generateProbabilityDistribution.cpp  generatepoints.cpp  imagedata.cpp  main.cpp  main_cli.cpp  mainqt.cpp  mypanelopengl.cpp  polyAvgShaderTestDriver.cpp  polypixel.cpp  shader_util.cpp
src/basics/: li.cpp  lmath.cpp  pointSet.cpp  polygon.cpp
src/basicsP2/: pointSetArray.cpp  trist.cpp
src/basicsP3/: directedGraph.cpp
src/delaunay/: dagnode.cpp  delaunay.cpp  directedgraph.cpp  li.cpp  lmath.cpp  point.cpp  pointset.cpp  pointsetarray.cpp  pointsetio.cpp  polygon.cpp  signDet.cpp  triangle.cpp  triangulation.cpp  trist.cpp
src/delaunay/longint/: li.cpp  lmath.cpp
src/geometry/: linesegment.cpp  polygon.cpp
src/linux/: stopwatch.cpp
src/linux/basics/: stopWatch.cpp
src/ui/opengl/: graphics.cpp
src/ui/qt5/: delaunay.cpp  voronoieffect.cpp
src/voronoi/: polyconstruct.cpp  voronoi.cpp  vparabola.cpp
src/win32/: stopwatch.cpp
src/win32/basics/: stopWatch.cpp
test/: basictests.cpp  testmain.cpp
test/delaunay/: dagtests.cpp  pointsetiotests.cpp  pointsettests.cpp  polygontests.cpp  triangletests.cpp  triangulationtests.cpp
test/geometry/: linesegmenttests.cpp  polygontests.cpp
test/voronoi/: polyconstructtests.cpp
